# base-mcp-oauth

./: .gitignore  README.md  pyproject.toml
examples/: custom_server.py  file_credentials_server.py  simple_server.py
src/mcp_base/: __init__.py  config.py  database.py  factory.py  oauth_provider.py  server.py  settings.py
src/mcp_base/templates/: login.html
tests/: test_database.py  test_oauth_provider.py
