[project]
name = "mcp-oauth-server"
version = "0.1.0"
description = "Minimal OAuth provider for MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.19.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_base"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_base/templates" = "mcp_base/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
